# MCP-SERVER-PROJECT

./: .gitignore  README.md  main.py  package.json  pyproject.toml
CH-1_CreateMCP/: 2_Python_client.py  3_langchain_client_server.py
CH-2_HTTP_MCP/: 1_http_mcp.py  2_langchain_client_server.py
CH-3_3rdParty_MCP/: community_mcp.py  tavily_mcp.py
CH-4_PyPi_MCP/: 2_client.py
CH-5_MCP_Gateway/: gateway.py
CH-6_MCP_Docker/: Dockerfile
